css/vimu.css
/* ... */
#keyboard-audio-visual {
    width: inherit;
    height: 76%;
    z-index: 2;
}

/* Keyboard */
#keyboard {
    height: 80%;
}

.keyboard-row {
    margin: 10px auto;
    height: 30%;
}

.keyboard-row-edit {
    /*margin: 8px auto;*/
    margin-top: 6px;
    height: 20%;
}

.keyboard-key {
    opacity: 0.6;
    /*border: 1px solid black;*/
    border-radius: 25px;
    color: black;
    padding-top: 10px;
    padding-left: 10px;
}

.keyboard-key h6 {
    margin: 0;
}

.keyboard-key p {
    text-align: center;
    background-color: transparent;
}

.keyboard-key-edit {
    opacity: 0.7;
    /*border: 1px solid black;*/
    border-radius: 15px;
    color: black;
    padding-left: 3px;
    padding-right: 3px;
    cursor: pointer;
}

.keyboard-key-edit h6 {
    padding-left: 5px;
    padding-top: 5px;
    margin-bottom: 2px;
}

.keyboard-key-edit p {
    font-size: xx-small;
    text-align: center;
    background-color: papayawhip;
}

.keyboard-key-edit:hover {
    border: 3px solid red;
    opacity: 1;
    /*background-color: #70a945;*/
    transition: border 0.1s ease;
    transition: opacity 0.1s ease;
}

.keyboard-key:hover .keyboard-key-edit {
    margin: -3px;
}

.row1 {
    background-color: #62C9D3;
}

.row2 {
    background-color: #82CDDE;
}

.row3 {
    background-color: #A2D8E7;
}

.row4 {
    background-color: #C5E4F1;
}

.row5 {
    background-color: #E6F4FD;
}

.row5 h6 {
    visibility: hidden;
}

#keyboard div {
    word-wrap: break-word;
    overflow-y: hidden;
    font-size: xx-small;
}

.ldBar-obj {
    width: 50%;
    margin: 0 auto;
}

.trash-container {
    opacity: 0.8;
}

.trash-container i {
    padding-top: 10px;
    padding-left: 10px;
    padding-right: 10px;
}

/* End Keyboard */

/* File Directory */
#file-directory {
    background-color: #F7D5D6;
    border: 1px solid #F7A7B3;
    border-radius: 10px;
    height: inherit;
}

#file-directory p,
#file-directory i,
#file-directory h5 {
    color: #943737;
}

#drop-zone {
    position: absolute;
    bottom:0;
    padding-top: 15px;
    margin-bottom: 15px;
    background-color: #FFE2E3;
    border: 1px solid #F7A7B3;
    border-radius: 10px;
    text-align: center;
}

#drop-zone p {
    font-size: 12px;
    width: 100%;
    padding-left:5px;
    padding-right:5px;
}

ul {
    list-style: none;
    padding: 0;
    margin: 0;
    width: auto;
    overflow: visible;
}

li {
    display: inline-block;
    clear: left;
    border-radius: 15px;
    width: 100%;
    align-content: center;
    position: relative;
    padding: 0;
}

li.selected {
    background-color: #F7A7B3;
    width: 100%;
    height:25px;
}

li.sound-file {
    height: 25px;
}

#search {
    border-radius: 50px;
    width: 90%;
}

.tg-inputwithicon {
    position: relative;
}

.search-form .tg-inputwithicon i {
    position: absolute;
    right: 30px;
    line-height: 35px;
}

.folder.tg-inputwithicon i {
    position: absolute;
    left: 15px;
    line-height: 27px;
}

p.foldername {
    padding-left: 40px;
    margin-bottom: 0px;
}

.sound-file.tg-inputwithicon i {
    position: absolute;
    line-height: 27px;
    padding-left: 30px;
}

p.soundname {
    position: relative;
    padding-left: 70px;
}

.scrollbar {
    float: left;
    height: auto;
    width: inherit;
    overflow-y: auto;
    margin-bottom: 25px;
}

/* TODO: Fix min height */
.force-overflow {
    min-height: 100px;
    width: inherit;
}

.scrollbar-primary::-webkit-scrollbar {
    width: 12px;
    background-color: #F7A7B3; 
    border-radius: 10px; 
}

.scrollbar-primary::-webkit-scrollbar-track {
    background-color: #FFE2E3;
    border-radius: 10px; 
}

.scrollbar-primary::-webkit-scrollbar-thumb {
    width: 12px;
    background-color: #F7A7B3; 
    border-radius: 10px;
}

/* End File Directory */

#customization-container {
    margin-top: 10px;
    height: 48%;
}

#audio, #visuals {
    background-color: #D6EACC;
    border: 1px solid forestgreen;
    border-radius: 10px;
}

/*Audio*/

#audio {
    color: #70a945;
}

/* waveform */
.waveform-display {
    background-color: #eaf3db;
    border: 2px solid #aed792;
    height: 65px;
}

.justify-vertical .col {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  height: 100px;
  align-items: center;
}

.control-buttons {
    background-color: #eaf3db;
    color: black;
    text-align: center;
    text-decoration: none;
    border: 2px solid #aed792;
    display: inline-block;
    font-size: 20px;

    width: 32px;
    height: 32px;
}

.no-button-display {
    background-color: transparent;
    border: none;
    padding: 0;
    font-size: 36px;
    /*margin:;*/
}

#audio-track {
    color: black;
}

/* settings */

.margin-10 {
    margin-right: 10px;
}

.margin-36 {
    margin-right: 36px;
}

.margin {
    margin-right: 55px;
}


.form-inline > * {
    margin: 5px 0px !important;
}

/* dropdown */
.styled-select select {
   background: transparent;
   border: 3px solid #aed792;
}

.styled-select {
    background-color: #eaf3db;
    color: #70a945;
}

/* quantization amount slider */
.quantization-amount-value {
    position: absolute;
    z-index: 1;
    top: 0;
    left: 0;
    padding: 44px 0 0 120px;

    color: #548929;
}

/* src: https://codepen.io/noahblon/pen/OyajvN */
.amount-slider input[type="range"] { 
    margin: auto;
    -webkit-appearance: none;
    position: relative;
    overflow: hidden;
    height: 25px;
    width: 60px;
    cursor: pointer;
    border-radius: 0;
    border: 3px solid #aed792;
    background-color: #eaf3db;
}

.amount-slider::-webkit-slider-runnable-track {
    background: #eaf3db;
}

.amount-slider::-webkit-slider-thumb {
    -webkit-appearance: none;
    width: 0px;
    height: 0px;
    background: #70a943;
    box-shadow: -100vw 0 0 100vw #70a943;
}

.amount-slider::-moz-range-track {
    height: 40px;
    background: #eaf3db;
}
/* ... */

